--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Build
-        run: npm run build
+      - name: Export
+        run: npm run export
         
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
